# Notebook_Assistant

./: .gitignore  PROJECT_ROADMAP.md  README.md
.github/: copilot-instructions.md
backend/: .env  README.md  main.py  pyproject.toml
backend/app/api/routes/: chat.py  documents.py  health.py  notebooks.py
backend/app/core/: langchain_components.py
backend/app/utils/: database.py  file_saver.py  security.py
frontend/notebook-assistant/: README.md  index.html  package.json
frontend/notebook-assistant/src/: App.jsx  main.jsx
frontend/notebook-assistant/src/components/: EndpointList.jsx  Layout.jsx  OpenAPILoader.jsx  OperationForm.jsx  icons.js
frontend/notebook-assistant/src/openapi/: OpenAPIContext.jsx  fetchSpec.js  generateExample.js  groupOperations.js  useOpenAPI.js
